--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <p>Learned HTML and CSS to the intermediate level to do webscrapping.</p><br>
           <h4>Projects</h4>
           <ul>
-            <li>Built my cv here</li>
+            <li>Built my cv <a href="https://git-nav.github.io/cv/>here</a></li>
           </ul>
         </div>
       </div>
